[package]
name = "deno_ast"
version = "0.46.2"
authors = ["the Deno authors"]
documentation = "https://docs.rs/deno_ast"
edition = "2021"
homepage = "https://deno.land/"
license = "MIT"
repository = "https://github.com/denoland/deno_ast"
description = "Source text parsing, lexing, and AST related functionality for Deno"

[package.metadata.docs.rs]
all-features = true

[features]
bundler = ["swc_bundler", "swc_ecma_transforms_optimization", "swc_graph_analyzer"]
concurrent = ["swc_common/concurrent"]
cjs = ["utils", "visit"]
codegen = ["swc_ecma_codegen", "swc_ecma_codegen_macros", "swc_macros_common"]
compat = ["transforms", "swc_ecma_transforms_compat", "swc_trace_macro", "swc_config", "swc_config_macro"]
dep_analysis = ["visit"]
proposal = ["transforms", "swc_ecma_transforms_proposal", "swc_ecma_transforms_classes", "swc_ecma_transforms_macros", "swc_macros_common"]
react = ["transforms", "swc_ecma_transforms_react", "swc_ecma_transforms_macros", "swc_config", "swc_config_macro", "swc_macros_common"]
scopes = ["view", "utils", "visit"]
sourcemap = ["dprint-swc-ext/sourcemap"]
transforms = ["swc_ecma_loader", "swc_ecma_transforms_base"]
emit = ["base64", "codegen", "sourcemap", "dep:sourcemap"]
transpiling = ["emit", "proposal", "react", "transforms", "typescript", "utils", "visit"]
typescript = ["transforms", "swc_ecma_transforms_typescript"]
utils = ["swc_ecma_utils"]
view = ["dprint-swc-ext/view"]
visit = ["swc_ecma_visit", "swc_visit", "swc_visit_macros", "swc_macros_common"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
deno_media_type = "0.2.8"
deno_terminal = "0.2.2"
deno_error = "0.5.6"

dprint-swc-ext = "0.23.0"
once_cell = "1.21.1"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
text_lines = { version = "0.6.0", features = ["serialization"] }
url = { version = "2.5.4", features = ["serde"] }
unicode-width = "0.2.0"

# swc's version bumping is very buggy and there will often be patch versions
# published that break our build, so we pin all swc versions to prevent
# pulling in new versions of swc crates
#
# NOTE: You can automatically update these dependencies by running ./scripts/update_swc_deps.ts
swc_atoms = "=5.0.0"
swc_common = "=8.0.1"
swc_config = { version = "=2.0.0", optional = true }
swc_config_macro = { version = "=1.0.0", optional = true }
swc_ecma_ast = { version = "=8.1.0", features = ["serde-impl"] }
swc_ecma_codegen = { version = "=10.0.0", optional = true }
swc_ecma_codegen_macros = { version = "=2.0.0", optional = true }
swc_ecma_loader = { version = "=8.0.0", optional = true }
swc_ecma_parser = "=11.0.0"
swc_ecma_transforms_base = { version = "=12.0.0", optional = true }
swc_ecma_transforms_classes = { version = "=12.0.0", optional = true }
swc_ecma_transforms_compat = { version = "=13.0.0", optional = true }
swc_ecma_transforms_macros = { version = "=1.0.0", optional = true }
swc_ecma_transforms_optimization = { version = "=12.0.0", optional = true }
swc_ecma_transforms_proposal = { version = "=12.0.0", optional = true }
swc_ecma_transforms_react = { version = "=13.0.0", optional = true }
swc_ecma_transforms_typescript = { version = "=13.0.0", optional = true }
swc_ecma_utils = { version = "=12.0.0", optional = true }
swc_ecma_visit = { version = "=8.0.0", optional = true }
swc_eq_ignore_macros = "=1.0.0"
swc_bundler = { version = "=15.0.0", optional = true }
swc_graph_analyzer = { version = "=9.0.0", optional = true }
swc_macros_common = { version = "=1.0.0", optional = true }
swc_trace_macro = { version = "=2.0.0", optional = true }
swc_visit = { version = "=2.0.0", optional = true }
swc_visit_macros = { version = "=0.5.13", optional = true }
# just for error handling
sourcemap = { version = "9.1.2", optional = true }
string_capacity = "0.1.5"
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
