[package]
name = "deno_ast"
version = "0.53.1"
authors = ["the Deno authors"]
documentation = "https://docs.rs/deno_ast"
edition = "2024"
homepage = "https://deno.land/"
license = "MIT"
repository = "https://github.com/denoland/deno_ast"
description = "Source text parsing, lexing, and AST related functionality for Deno"

[package.metadata.docs.rs]
all-features = true

[features]
cjs = ["visit"]
codegen = ["oxc/codegen"]
dep_analysis = ["visit"]
scopes = ["visit"]
semantic = ["oxc/semantic"]
emit = ["codegen", "dep:base64"]
transforms = ["semantic"]
transpiling = ["emit", "transforms", "visit"]
visit = ["oxc/ast_visit"]

[dependencies]
capacity_builder = "0.5.0"
deno_media_type = "0.4.0"
deno_terminal = "0.2.2"
deno_error = "0.7.0"

base64 = { version = "0.22.1", optional = true }
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
text_lines = { version = "0.6.0", features = ["serialization"] }
url = { version = "2.5.4", features = ["serde"] }
unicode-width = "0.2.0"
thiserror = "2.0.12"

oxc = { version = "0.118.0", features = [
  "semantic",
  "codegen",
  "transformer",
  "ast_visit",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
